[project]
name = "nba-war"
version = "0.1.0"
description = "NBA Wins Above Replacement using Adjusted Plus-Minus regression"
requires-python = ">=3.10"
dependencies = [
    "nba-api>=1.4.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "tqdm>=4.65.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "pyarrow>=12.0.0",
]
